# fabric-sql-database-cicd

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  LICENSE  NuGet.config  README.md  build.proj  global.json
.github/actions/plan-migration/: action.yml
.github/workflows/: deploy-env.yml  deploy.yml  pr-validation.yml  provision.yml
analyzers/FabricSqlRules/: AuditColumnsRule.cs  AuditConvention.cs  AuditTriggerRule.cs  BoundedStringsRule.cs  FabricSqlRules.csproj  README.md
analyzers/sqlfluff-fabric-rules/: README.md  pyproject.toml
analyzers/sqlfluff-fabric-rules/src/sqlfluff_fabric_rules/: __init__.py  rules.py
databases/: Directory.Build.props  Directory.Build.targets
databases/AppDb/: AppDb.sqlproj
databases/AppDb/Scripts/DataMigrations/: README.md
databases/AppDb/Scripts/PostDeployment/: PostDeployment.sql
databases/AppDb/Security/Roles/: app_reader.sql
databases/AppDb/Tables/: app.Customer.sql  app.Order.sql
databases/AppDb/Triggers/: app.trg_Customer_Audit.sql  app.trg_Order_Audit.sql
deploy/: fabric.publish.xml
docs/: architecture.md  ci-cd.md  conventions.md  data-migrations.md  local-development.md  operations.md  provisioning.md  security.md
infra/terraform/: .gitignore  .terraform.lock.hcl  README.md  main.tf  outputs.tf  providers.tf  terraform.tf  variables.tf
infra/terraform/environments/: dev.backend.hcl.example  dev.tfvars.example  prod.backend.hcl.example  prod.tfvars.example  test.backend.hcl.example  test.tfvars.example
local/: README.md  deploy-local.sh  docker-compose.yml
(+5 files in other folders)
